Fixes top alignment of variables panel

--- a/main/components/components.css
+++ b/main/components/components.css
@@ -68,7 +68,7 @@
 	padding-top: 2px;
 }
 .VariablesPanel {
-	margin-top: 1.8rem;
+	margin-top: 1.5rem;
 }
 .UnderlineComponent {
 	position: absolute;
